# jogo-da-forca

./: CMakeLists.txt  README.md  main.cpp
imagens/: imagens.qrc
src/: Gui.cpp  main.cpp
src/include/: Gui.h  jogoForca.h
ui/: jogoForca.h  jogoForca.ui
